subprojects/PCL/include/pcl/pcl_container.h

// -- Lifecycle callbacks (user implements) --------------------------------

/// \brief Lifecycle and tick callbacks provided by the user.
///
/// All callbacks are optional (NULL = no-op).
/// Return PCL_OK to indicate success.  Any other value aborts the
/// transition and leaves the container in its previous state.
typedef struct {
  pcl_status_t (*on_configure)  (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_activate)   (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_deactivate) (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_cleanup)    (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_shutdown)   (pcl_container_t* self, void* user_data);

  /// \brief Periodic tick -- called at the container's configured rate while ACTIVE.
  pcl_status_t (*on_tick)(pcl_container_t* self, double dt_seconds,
                          void* user_data);
} pcl_callbacks_t;
// -- Create / destroy ----------------------------------------------------

/// \brief Create a new container in the UNCONFIGURED state.
/// \param name       Human-readable component name (copied).
/// \param callbacks  Lifecycle + tick callbacks (struct is copied).
/// \param user_data  Opaque pointer passed to every callback.
/// \return New container handle, or NULL on allocation failure.
pcl_container_t* pcl_container_create(const char*            name,
                                      const pcl_callbacks_t* callbacks,
                                      void*                  user_data);
/// \brief Destroy a container and free all associated resources.
void pcl_container_destroy(pcl_container_t* c);
// -- Lifecycle transitions -----------------------------------------------

/// \brief Transition UNCONFIGURED -> CONFIGURED.
pcl_status_t pcl_container_configure(pcl_container_t* c);
/// \brief Transition CONFIGURED -> ACTIVE.
pcl_status_t pcl_container_activate(pcl_container_t* c);
/// \brief Transition ACTIVE -> CONFIGURED.
pcl_status_t pcl_container_deactivate(pcl_container_t* c);
/// \brief Transition CONFIGURED -> UNCONFIGURED.
pcl_status_t pcl_container_cleanup(pcl_container_t* c);
/// \brief Transition any state -> FINALIZED.
pcl_status_t pcl_container_shutdown(pcl_container_t* c);
// -- State query ---------------------------------------------------------

/// \brief Get the current lifecycle state.
pcl_state_t pcl_container_state(const pcl_container_t* c);