subprojects/PCL/bindings/ada/pcl_bindings.ads


  --  Socket-transport state-change callback.  May fire from arbitrary
  --  threads (initial connect on the creating thread, reconnects on the
  --  receive thread); implementations must be thread-safe.
  type Pcl_Socket_State_Cb_Access is access procedure
    (State     : Pcl_Socket_State;
     User_Data : System.Address);
  pragma Convention(C, Pcl_Socket_State_Cb_Access);

  --  Vtable entries implemented by transport adapters.  ``Adapter_Ctx`` is
  --  the opaque pointer registered in ``Pcl_Transport_Record``; the executor
  --  invokes only the slots a given transport provides.

  --  Send a published message on ``Topic``.  Implementations are expected to
  --  copy ``Msg`` if they need to outlive the call.
  type Transport_Publish_Access is access function
    (Adapter_Ctx : System.Address;
     Topic       : Interfaces.C.Strings.chars_ptr;
     Msg         : access constant Pcl_Msg) return Pcl_Status;
  pragma Convention(C, Transport_Publish_Access);

  type Transport_Serve_Access is access function
    (Adapter_Ctx  : System.Address;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Response     : access Pcl_Msg) return Pcl_Status;
  pragma Convention(C, Transport_Serve_Access);

  type Transport_Subscribe_Access is access function
    (Adapter_Ctx : System.Address;
     Topic       : Interfaces.C.Strings.chars_ptr;
     Type_Name   : Interfaces.C.Strings.chars_ptr) return Pcl_Status;
  pragma Convention(C, Transport_Subscribe_Access);

  type Transport_Invoke_Async_Access is access function
    (Adapter_Ctx  : System.Address;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Resp_Cb_Access;
     User_Data    : System.Address) return Pcl_Status;
  pragma Convention(C, Transport_Invoke_Async_Access);

  type Transport_Respond_Access is access function
    (Adapter_Ctx : System.Address;
     Svc_Ctx     : Pcl_Svc_Context_Access;
     Response    : access constant Pcl_Msg) return Pcl_Status;
  pragma Convention(C, Transport_Respond_Access);

  type Transport_Shutdown_Access is access procedure
    (Adapter_Ctx : System.Address);
  pragma Convention(C, Transport_Shutdown_Access);

  type Transport_Invoke_Stream_Access is access function
    (Adapter_Ctx  : System.Address;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Stream_Msg_Cb_Access;
     User_Data    : System.Address;
     Stream_Handle : access System.Address) return Pcl_Status;
  pragma Convention(C, Transport_Invoke_Stream_Access);

  type Transport_Stream_Send_Access is access function
    (Adapter_Ctx   : System.Address;
     Stream_Handle : System.Address;
     Msg           : access constant Pcl_Msg) return Pcl_Status;
  pragma Convention(C, Transport_Stream_Send_Access);

  type Transport_Stream_End_Access is access function
    (Adapter_Ctx   : System.Address;
     Stream_Handle : System.Address;
     Status        : Pcl_Status) return Pcl_Status;
  pragma Convention(C, Transport_Stream_End_Access);

  type Transport_Stream_Cancel_Access is access function
    (Adapter_Ctx   : System.Address;
     Stream_Handle : System.Address) return Pcl_Status;
  pragma Convention(C, Transport_Stream_Cancel_Access);

  --  Vtable presented by a transport adapter.  Slots left ``null`` cause the
  --  executor to return ``ERR_NOT_FOUND`` when an operation needs them
  --  (e.g. UDP leaves ``Invoke_Async`` / ``Respond`` null on purpose so it
  --  cannot accidentally carry RPC traffic).
  type Pcl_Transport_Record is record
    Publish       : Transport_Publish_Access := null;
    Serve         : Transport_Serve_Access := null;
    Subscribe     : Transport_Subscribe_Access := null;
    Invoke_Async  : Transport_Invoke_Async_Access := null;
    Respond       : Transport_Respond_Access := null;
    Shutdown      : Transport_Shutdown_Access := null;
    Invoke_Stream : Transport_Invoke_Stream_Access := null;
    Stream_Send   : Transport_Stream_Send_Access := null;
    Stream_End    : Transport_Stream_End_Access := null;
    Stream_Cancel : Transport_Stream_Cancel_Access := null;
    Adapter_Ctx   : System.Address := System.Null_Address;
  end record;
  pragma Convention(C, Pcl_Transport_Record);

  --  Optional knobs for ``Create_Socket_Client_Ex``.  All-zero gives
  --  legacy single-shot connect behaviour; populate the fields to enable
  --  bounded retry, auto-reconnect, and state-change callbacks.  See
  --  ``doc/guides/peer_transport_configuration.md`` section 8.1.
  type Pcl_Socket_Client_Opts is record
    Connect_Timeout_Ms : Interfaces.C.unsigned := 0;
    Max_Retries        : Interfaces.C.unsigned := 0;
    Auto_Reconnect     : Interfaces.C.int := 0;
    State_Cb           : Pcl_Socket_State_Cb_Access := null;
    State_Cb_Data      : System.Address := System.Null_Address;
  end record;
  pragma Convention(C, Pcl_Socket_Client_Opts);

  ---------------------------------------------------------------------------
  --  Executor lifecycle
  ---------------------------------------------------------------------------

  --  Allocate a fresh executor.  Returns ``null`` on allocation failure.
  function Create_Executor return Pcl_Executor_Access;
  pragma Import(C, Create_Executor, "pcl_executor_create");

  --  Tear down an executor and any registered transports/containers it owns.
  procedure Destroy_Executor(Exec : Pcl_Executor_Access);
  pragma Import(C, Destroy_Executor, "pcl_executor_destroy");

  function Add_Container
    (Exec      : Pcl_Executor_Access;
     Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Add_Container, "pcl_executor_add");

  function Remove_Container
    (Exec      : Pcl_Executor_Access;
     Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Remove_Container, "pcl_executor_remove");

  --  Run the executor loop until ``Request_Shutdown`` is called or all
  --  containers report shutdown.
  function Spin(Exec : Pcl_Executor_Access) return Pcl_Status;
  pragma Import(C, Spin, "pcl_executor_spin");

  --  Process queued work for at most ``Timeout_Ms`` milliseconds.  Use this
  --  instead of ``Spin`` when the application owns the outer loop.
  function Spin_Once
    (Exec       : Pcl_Executor_Access;
     Timeout_Ms : Interfaces.C.unsigned) return Pcl_Status;
  pragma Import(C, Spin_Once, "pcl_executor_spin_once");

  --  Ask the executor to break out of ``Spin`` at the next safe point.
  procedure Request_Shutdown(Exec : Pcl_Executor_Access);
  pragma Import(C, Request_Shutdown, "pcl_executor_request_shutdown");

  --  Drain pending work for up to ``Timeout_Ms``, then stop.
  function Shutdown_Graceful
    (Exec       : Pcl_Executor_Access;
     Timeout_Ms : Interfaces.C.unsigned) return Pcl_Status;
  pragma Import(C, Shutdown_Graceful, "pcl_executor_shutdown_graceful");

  ---------------------------------------------------------------------------
  --  External ingress
  --
  --  Transports call these to inject inbound traffic.  Application code
  --  rarely uses them directly; they exist on the binding for transports
  --  written in Ada and for tests that simulate remote traffic.
  ---------------------------------------------------------------------------

  --  Inject a locally-sourced topic message as if it were published inside
  --  the executor.
  function Post_Incoming
    (Exec  : Pcl_Executor_Access;
     Topic : Interfaces.C.Strings.chars_ptr;
     Msg   : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Post_Incoming, "pcl_executor_post_incoming");

  --  Inject a topic message attributed to ``Peer_Id``.  Used by transports
  --  to feed remote subscribers; per-port allow-lists then decide whether
  --  the message is dispatched.
  function Post_Remote_Incoming
    (Exec    : Pcl_Executor_Access;
     Peer_Id : Interfaces.C.Strings.chars_ptr;
     Topic   : Interfaces.C.Strings.chars_ptr;
     Msg     : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Post_Remote_Incoming, "pcl_executor_post_remote_incoming");

  function Post_Service_Request
    (Exec         : Pcl_Executor_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Resp_Cb_Access;
     User_Data    : System.Address) return Pcl_Status;
  pragma Import(C, Post_Service_Request, "pcl_executor_post_service_request");

  function Post_Response_Cb
    (Exec      : Pcl_Executor_Access;
     Callback  : Pcl_Resp_Cb_Access;
     User_Data : System.Address;
     Data      : System.Address;
     Size      : Interfaces.C.unsigned) return Pcl_Status;
  pragma Import(C, Post_Response_Cb, "pcl_executor_post_response_cb");

  function Post_Response_Msg
    (Exec      : Pcl_Executor_Access;
     Callback  : Pcl_Resp_Cb_Access;
     User_Data : System.Address;
     Msg       : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Post_Response_Msg, "pcl_executor_post_response_msg");

  --  Synchronous local service invocation; resolves the service via the
  --  executor's port table.
  function Invoke_Service
    (Exec         : Pcl_Executor_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Response     : access Pcl_Msg) return Pcl_Status;
  pragma Import(C, Invoke_Service, "pcl_executor_invoke_service");

  --  Synchronous remote service invocation through the transport registered
  --  for ``Peer_Id``.
  function Invoke_Service_Remote
    (Exec         : Pcl_Executor_Access;
     Peer_Id      : Interfaces.C.Strings.chars_ptr;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Response     : access Pcl_Msg) return Pcl_Status;
  pragma Import(C, Invoke_Service_Remote, "pcl_executor_invoke_service_remote");

  --  Publish on ``Topic`` using the executor's default transport (or local
  --  fan-out only, depending on the active route).
  function Publish
    (Exec  : Pcl_Executor_Access;
     Topic : Interfaces.C.Strings.chars_ptr;
     Msg   : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Publish, "pcl_executor_publish");

  ---------------------------------------------------------------------------
  --  Container lifecycle and ports
  ---------------------------------------------------------------------------

  --  Allocate a container with the given lifecycle callbacks.  ``Name`` is
  --  copied; ``Callbacks`` and ``User_Data`` are retained until destruction.
  function Create_Container
    (Name      : Interfaces.C.Strings.chars_ptr;
     Callbacks : access constant Pcl_Callbacks;
     User_Data : System.Address) return Pcl_Container_Access;
  pragma Import(C, Create_Container, "pcl_container_create");

  procedure Destroy_Container(Container : Pcl_Container_Access);
  pragma Import(C, Destroy_Container, "pcl_container_destroy");

  --  Drive container lifecycle transitions.  Each call invokes the matching
  --  ``On_*`` callback and updates ``Container_State``.
  function Configure(Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Configure, "pcl_container_configure");

  function Activate(Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Activate, "pcl_container_activate");

  function Deactivate(Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Deactivate, "pcl_container_deactivate");

  function Cleanup(Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Cleanup, "pcl_container_cleanup");

  function Shutdown(Container : Pcl_Container_Access) return Pcl_Status;
  pragma Import(C, Shutdown, "pcl_container_shutdown");

  function Container_State(Container : Pcl_Container_Access) return Pcl_State;
  pragma Import(C, Container_State, "pcl_container_state");
